[project]
name = "hikari-nya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "anamoyee", email = "thecreatorrr333@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
	"hikari>=2.3.1",
	"hikari-miru>=4.2.0,<5",
	"hikari-arc>=2.1.0,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nya"]

[tool.hatch.version]
path = "src/nya/_version.py"
pattern = '__version__(?:: str)? *= *\"(?P<version>[^\"]+)\"'
